crates/parser/tests/snapshots/block_string_1_folded_keep_none_emptyln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-folded-keep-none-emptyln-dedent

## Input

```
key >+
  hello

other val

```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..16
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..15
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
      NEWLINE@14..15 "\n"
      LINE_STRING@15..15
    NEWLINE@15..16 "\n"
  ENTRY@16..26
    WORD_KEY@16..21
      WORD@16..21 "other"
    SPACE@21..22 " "
    LINE_STRING@22..25
      STRING@22..25 "val"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@16..21 "other",
            },
            value: LineString {
                string: STRING@22..25 "val",
            },
        },
    ],
}
```

vim:ft=markdown
