crates/parser/tests/snapshots/block_string_1_folded_strip_emptyln_wsln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-folded-strip-emptyln-wsln-eof

## Input

```
key >-

  hello
 

```

## CST

```
SOURCE_FILE@0..18
  ENTRY@0..18
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..17
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "hello"
      NEWLINE@15..16 "\n"
      SPACE@16..17 " "
      LINE_STRING@17..17
    NEWLINE@17..18 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..15 "hello",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
