crates/parser/tests/snapshots/block_string_1_folded_strip_wsln_none_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-folded-strip-wsln-none-dedent

## Input

```
key >-
 
  hello
other val

```

## CST

```
SOURCE_FILE@0..27
  ENTRY@0..16
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..16
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      SPACE@7..8 " "
      LINE_STRING@8..8
      NEWLINE@8..9 "\n"
      SPACE@9..11 "  "
      LINE_STRING@11..16
        STRING@11..16 "hello"
  NEWLINE@16..17 "\n"
  ENTRY@17..26
    WORD_KEY@17..22
      WORD@17..22 "other"
    SPACE@22..23 " "
    LINE_STRING@23..26
      STRING@23..26 "val"
  NEWLINE@26..27 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@11..16 "hello",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@17..22 "other",
            },
            value: LineString {
                string: STRING@23..26 "val",
            },
        },
    ],
}
```

vim:ft=markdown
