crates/parser/tests/snapshots/block_string_1_literal_clip_emptyln_wsln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-literal-clip-emptyln-wsln-dedent

## Input

```
key |

  hello
 
other val

```

## CST

```
SOURCE_FILE@0..27
  ENTRY@0..17
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..16
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      LINE_STRING@6..6
      NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
      NEWLINE@14..15 "\n"
      SPACE@15..16 " "
      LINE_STRING@16..16
    NEWLINE@16..17 "\n"
  ENTRY@17..27
    WORD_KEY@17..22
      WORD@17..22 "other"
    SPACE@22..23 " "
    LINE_STRING@23..26
      STRING@23..26 "val"
    NEWLINE@26..27 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@17..22 "other",
            },
            value: LineString {
                string: STRING@23..26 "val",
            },
        },
    ],
}
```

vim:ft=markdown
