crates/parser/tests/snapshots/block_string_1_literal_clip_wsln_wsln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-literal-clip-wsln-wsln-dedent

## Input

```
key |
  hello
other val

```

## CST

```
SOURCE_FILE@0..24
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..13
        STRING@8..13 "hello"
  NEWLINE@13..14 "\n"
  ENTRY@14..23
    WORD_KEY@14..19
      WORD@14..19 "other"
    SPACE@19..20 " "
    LINE_STRING@20..23
      STRING@20..23 "val"
  NEWLINE@23..24 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..13 "hello",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@14..19 "other",
            },
            value: LineString {
                string: STRING@20..23 "val",
            },
        },
    ],
}
```

vim:ft=markdown
