crates/parser/tests/snapshots/block_string_1_literal_keep_emptyln_wsln_eof_nonl.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-literal-keep-emptyln-wsln-eof-nonl

## Input

```
key |+
  hello
```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..14
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..14
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
