crates/parser/tests/snapshots/block_string_1_literal_keep_wsln_emptyln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-1-literal-keep-wsln-emptyln-eof

## Input

```
key |+
 
  hello


```

## CST

```
SOURCE_FILE@0..18
  ENTRY@0..17
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..17
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..8 " "
      LINE_STRING@8..8
      NEWLINE@8..9 "\n"
      SPACE@9..11 "  "
      LINE_STRING@11..16
        STRING@11..16 "hello"
      NEWLINE@16..17 "\n"
      LINE_STRING@17..17
  NEWLINE@17..18 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@11..16 "hello",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
